Refactor: change Person model to User with all usages