@@ -13,21 +13,22 @@ import ru.forum.whale.space.api.exception.ResourceAlreadyExistsException;
 import ru.forum.whale.space.api.exception.ResourceNotFoundException;
 import ru.forum.whale.space.api.model.Chat;
 import ru.forum.whale.space.api.model.Message;
-import ru.forum.whale.space.api.model.Person;
+import ru.forum.whale.space.api.model.User;
 import ru.forum.whale.space.api.repository.ChatRepository;
-import ru.forum.whale.space.api.repository.PersonRepository;
+import ru.forum.whale.space.api.repository.UserRepository;
 import ru.forum.whale.space.api.util.SessionUtil;
 
 import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class ChatService {
     private final ChatRepository chatRepository;
-    private final PersonRepository personRepository;
+    private final UserRepository userRepository;
     private final ModelMapper modelMapper;
 
     public List<ChatWithLastMessageDto> findAll() {
@@ -35,15 +36,17 @@ public class ChatService {
                 .stream()
                 .filter(chat -> !chat.getMessages().isEmpty())
                 .map(chat -> {
-                    ChatWithLastMessageDto dto = modelMapper.map(chat, ChatWithLastMessageDto.class);
+                    ChatWithLastMessageDto chatDto = modelMapper.map(chat, ChatWithLastMessageDto.class);
 
                     chat.getMessages().stream()
                             .max(Comparator.comparing(Message::getCreatedAt))
-                            .ifPresent(msg -> dto.setLastMessage(modelMapper.map(msg, MessageDto.class)));
+                            .ifPresent(message -> chatDto.setLastMessage(modelMapper.map(message, MessageDto.class)));
 
-                    return dto;
+                    return chatDto;
                 })
-                .toList();
+                .sorted(Comparator.comparing(chatDto -> chatDto.getLastMessage().getCreatedAt()))
+                .collect(Collectors.toList())
+                .reversed();
     }
 
     public ChatDto findById(int id) {
@@ -61,10 +64,10 @@ public class ChatService {
     }
 
     public ChatDto findWithUser(int partnerId) {
-        Pair<Person, Person> users = resolveParticipants(partnerId, "Нельзя получить чат с самим собой");
+        Pair<User, User> users = resolveParticipants(partnerId, "Нельзя получить чат с самим собой");
 
-        Person first = users.getFirst();
-        Person second = users.getSecond();
+        User first = users.getFirst();
+        User second = users.getSecond();
 
         Chat chat = chatRepository.findByUser1AndUser2(first, second)
                 .orElseThrow(() -> new ResourceNotFoundException("Чат с указанным пользователем не найден"));
@@ -74,10 +77,10 @@ public class ChatService {
 
     @Transactional
     public ChatDto save(int partnerId) {
-        Pair<Person, Person> users = resolveParticipants(partnerId, "Нельзя создать чат с самим собой");
+        Pair<User, User> users = resolveParticipants(partnerId, "Нельзя создать чат с самим собой");
 
-        Person first = users.getFirst();
-        Person second = users.getSecond();
+        User first = users.getFirst();
+        User second = users.getSecond();
 
         if (chatRepository.findByUser1AndUser2(first, second).isPresent()) {
             throw new ResourceAlreadyExistsException("Чат с указанным пользователем уже существует");
@@ -92,15 +95,15 @@ public class ChatService {
         return convertToChatDto(chatRepository.save(chat));
     }
 
-    private Pair<Person, Person> resolveParticipants(int partnerId, String sameUserMsg) {
-        Person currentUser = SessionUtil.getCurrentUser();
+    private Pair<User, User> resolveParticipants(int partnerId, String sameUserMsg) {
+        User currentUser = SessionUtil.getCurrentUser();
         int currentUserId = currentUser.getId();
 
         if (currentUserId == partnerId) {
             throw new IllegalOperationException(sameUserMsg);
         }
 
-        Person partner = personRepository.findById(partnerId)
+        User partner = userRepository.findById(partnerId)
                 .orElseThrow(() -> new ResourceNotFoundException("Пользователь с указанным ID не найден"));
 
         return currentUserId < partnerId ? Pair.of(currentUser, partner) : Pair.of(partner, currentUser);
